# mla-moe

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: plan-getp-kickoff.md
include/: dump.h  engine.h  getp.h  model.h  model_config.h  safetensors_loader.h  tensor.h  tokenizer.h
src/: dump.c  getp_eval.c  getp_run.hip  main.c  model_load.c  run.c  safetensors_loader.c  tensor.c  tokenizer.c
tests/bench/: bench.py
tests/eval/: eval.py  gen_reference.py  threshold.json
tests/eval/dsv2lite/: completions.i32.txt  prompts.i32.txt  reference.json
tests/eval/glm47/: completions.i32.txt  prompts.i32.txt  reference.json  requests.txt
tests/oracle/: README.md  compare_decode.py  compare_ppl.py  compare_prefill.py  gen_oracle.py  load_oracle.py  mla_reference.py
tests/tokenizer/: compare_hf.py  tok_cli.c
tests/weight_loading/: compare_dumps.sh  dump_hex.py
