[project]
name = "mla-moe-tooling"
version = "0.1.0"
description = "Python oracle + weight-loading test tooling for the MLA-MoE C inference engine."
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.24",
    "safetensors>=0.4.0",
    "transformers>=5.0",
    "accelerate>=1.0",
    "torch>=2.12",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
